<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/customBackground"
    android:background="?attr/customBackground"
    android:id="@+id/contrai"
    android:fitsSystemWindows="true"
    tools:context=".ui.players.PlayersFragment">
    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/king_of_boz"
                android:textColor="?attr/textFillColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogadores"
                android:textColor="?attr/textFillColor"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_player_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="?attr/colorPrimary"
            android:background="@drawable/background_circle"
            android:text="00"
            android:textColor="?attr/customTextBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginRight="10dp" />

        <ImageView
            android:id="@+id/personSelect"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="?attr/customTextBackground"
            android:background="@drawable/background_circle"
            android:src="@drawable/ic_person_check"
            app:tint="?attr/colorPrimary"
            android:padding="12dp" />

    </LinearLayout>

    <include
        android:id="@+id/customToolbar"
        layout="@layout/toolbar_select_gamers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="16dp" />


    <TextView
        android:id="@+id/button_adicionar_jogador"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="?attr/colorPrimary"
        android:background="@drawable/background_card_btn_repouso_destaque_menu"
        android:gravity="top|center"
        android:paddingTop="25dp"
        android:text="@string/adicionar_jogador"
        android:elevation="1dp"
        android:visibility="visible"
        android:textColor="?attr/customTextBackground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="44dp"/>

    <ImageView
        android:id="@+id/image_empty_state_back"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/imagem_no_list_02"
        android:visibility="invisible"
        app:tint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        app:layout_constraintBottom_toTopOf="@+id/button_adicionar_jogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_empty_state"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/imagem_no_list_01"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        app:layout_constraintBottom_toTopOf="@+id/button_adicionar_jogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="180dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_player_gamers"/>

</androidx.constraintlayout.widget.ConstraintLayout>